cppgc_headers = [
  'testing.h',
  'cross-thread-persistent.h',
  'name-provider.h',
  'persistent.h',
  'prefinalizer.h',
  'allocation.h',
  'process-heap-statistics.h',
  'ephemeron-pair.h',
  'custom-space.h',
  'type-traits.h',
  'heap-state.h',
  'default-platform.h',
  'heap-statistics.h',
  'heap-handle.h',
  'visitor.h',
  'garbage-collected.h',
  'trace-trait.h',
  'object-size-trait.h',
  'common.h',
  'heap-consistency.h',
  'macros.h',
  'heap.h',
  'sentinel-pointer.h',
  'liveness-broker.h',
  'member.h',
  'platform.h',
  'source-location.h',
  'explicit-management.h',
]

install_headers(cppgc_headers, subdir: install_header_subdir / 'cppgc')

subdir('internal')
