torque_compiler_sources = [
  'torque.cc',
  'cc-generator.cc',
  'cfg.cc',
  'class-debug-reader-generator.cc',
  'cpp-builder.cc',
  'csa-generator.cc',
  'declarable.cc',
  'declaration-visitor.cc',
  'declarations.cc',
  'earley-parser.cc',
  'global-context.cc',
  'implementation-visitor.cc',
  'instance-type-generator.cc',
  'instructions.cc',
  'kythe-data.cc',
  'server-data.cc',
  'source-positions.cc',
  'torque-code-generator.cc',
  'torque-compiler.cc',
  'torque-parser.cc',
  'type-inference.cc',
  'type-oracle.cc',
  'type-visitor.cc',
  'types.cc',
  'utils.cc',
]

torque = executable('torque', torque_compiler_sources,
  override_options: [
    'cpp_std=' + cpp_std,
    'cpp_eh=default',
    'cpp_rtti=false',
  ],
  implicit_include_directories: false,
  dependencies: [v8_libbase_runnable_dep],
  native: not meson.can_run_host_binaries(),
)
