cppgc_internal_headers = [
  'write-barrier.h',
  'gc-info.h',
  'persistent-node.h',
  'name-trait.h',
  'pointer-policies.h',
  'logging.h',
  'api-constants.h',
  'atomic-entry-flag.h',
  'member-storage.h',
  'compiler-specific.h',
  'finalizer-trait.h',
  'caged-heap-local-data.h',
  'base-page-handle.h',
  'caged-heap.h',
]

install_headers(cppgc_internal_headers, subdir: install_header_subdir / 'cppgc' / 'internal')
